# propresenter-lyrics

./: .gitignore  NOTICE  README.md  _tags.py  config.example.yaml  prep_lyrics.py  pyproject.toml
scripts/: compile_protos.sh
src/propresenter_lyrics/: _tags.py  config.json  make_pro.py  prep_lyrics.py
src/propresenter_lyrics/proto/: action_pb2.py  advertisementGroup_pb2.py  alignmentGuide_pb2.py  alphaType_pb2.py  analyticsApi_pb2.py  analyticsCreate_pb2.py  analyticsEdit_pb2.py  analyticsEvent_pb2.py  analyticsImport_pb2.py  analyticsMediaManagement_pb2.py  analyticsMultiTracks_pb2.py  analyticsPlaybackMarker_pb2.py  analyticsPowerPoint_pb2.py  analyticsProContent_pb2.py  analyticsStartup_pb2.py  analyticsSync_pb2.py  analyticsTimecode_pb2.py  analyticsTimeline_pb2.py  analyticsTrackedEvents_pb2.py  analyticsTriggerCue_pb2.py  analyticsTriggerMedia_pb2.py  analyticsTrigger_pb2.py  analyticsUI_pb2.py  applicationInfo_pb2.py  audio_pb2.py  background_pb2.py  ccli_pb2.py  clearGroups_pb2.py  collectionElementType_pb2.py  color_pb2.py  cue_pb2.py  customOptions_pb2.py  digitalAudio_pb2.py  effects_pb2.py  fileProperties_pb2.py  font_pb2.py  graphicsData_pb2.py  groups_pb2.py  hotKey_pb2.py  input_pb2.py  (+75 more)
