[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "propresenter-lyrics"
version = "0.1.1"
description = "Generate ProPresenter 7 (.pro) presentations from lyrics text, with pinyin, translation, and reverence-pronoun tooling."
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [{ name = "Li Xue" }]
keywords = ["propresenter", "worship", "lyrics", "pinyin", "protobuf"]
dependencies = [
    "protobuf>=4",
    "pypinyin>=0.44",
    "anthropic>=0.30",
    "opencc>=1.1",
    "pyyaml>=5.1",
]

[project.scripts]
pp-make = "propresenter_lyrics.make_pro:main"
pp-prep = "propresenter_lyrics.prep_lyrics:main"

[project.urls]
Homepage = "https://github.com/LilySnow/propresenter-lyrics"
Source = "https://github.com/LilySnow/propresenter-lyrics"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"propresenter_lyrics" = ["config.template.yaml"]
"propresenter_lyrics.proto" = ["*.py"]
